--- a/Src/OpenCBS.ArchitectureV2/packages.config
+++ b/Src/OpenCBS.ArchitectureV2/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="IronPython" version="2.7.4" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="6.0.1" targetFramework="net40" />
+  <package id="ObjectListView.Official" version="2.8.1" targetFramework="net40" />
   <package id="structuremap" version="2.6.4.1" targetFramework="net45" />
 </packages>
